--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,8 @@
-<div class="d-flex flex-coloum justify-content-center w-100 h-100">
+<body>
+
+<head>
+
+<div class="d-flex flex-coloumn justify-content-center w-100 h-100">
 
     <div class="d-flex flex-coloumn justify-content-centrer align-items-center">
 
@@ -11,9 +15,12 @@
         </div>
         <a href="""https://codepen.io/P1N20/full/pyBNzX" class="btn btn-outline-light">FULL SCREEN <i class="fas fa-expand ms-2"></i></a>
     </div>
-    <a href="https://manuel.pinto.dev" class="text-decoration-none">
-            <h5 class="fw-light text-white m-0">- Pen by Manuel Pinto -</h5>
+    <!-- <a href="https://manuel.pinto.dev" class="text-decoration-none">
+            <h5 class="fw-light text-white m-0">- Pen by Manuel Pinto -</h5> -->
         </a>
     </div>
 </div>
 </div>
+</head>
+    
+</body>
